# opengl-testing

./: .gitignore  CMakeLists.txt  README.txt
include/glad/: glad.h
shaders/: frag_shade.glsl  vert_shade.glsl
src/: glad.c  opengl-stuff.cpp  opengl-stuff.hpp
